--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20230206182100" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20230208203603" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap&_v=20230206182100"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap&_v=20230208203603"
     rel="stylesheet"
   />
   <title>TechCues</title>
@@ -43,7 +43,7 @@
             <p class="banner__date">February 12, 2021</p>
           </div>
           <div class="banner__img">
-            <picture><source srcset="img/banner.webp" type="image/webp"><img class="responsive__img" src="img/banner.png" alt="" /></picture>
+            <picture><source srcset="img/banner.webp" type="image/webp"><img class="responsive-img" src="img/banner.png" alt="" /></picture>
           </div>
         </div>
       </section>
@@ -51,7 +51,7 @@
         <div class="articles__content wrapper">
           <div class="articles__item">
             <img
-              class="responsive__img"
+              class="responsive-img"
               src="img/mobile.png"
               alt="articlesimg"
             />
@@ -62,7 +62,7 @@
           </div>
           <div class="articles__item">
             <img
-              class="responsive__img"
+              class="responsive-img"
               src="img/cause.png"
               alt="articlesimg"
             />
@@ -73,7 +73,7 @@
           </div>
           <div class="articles__item">
             <img
-              class="responsive__img"
+              class="responsive-img"
               src="img/case.png"
               alt="articlesimg"
             />
@@ -110,7 +110,7 @@
         <div class="studies__content wrapper">
           <div class="studies__banner">
             <img
-              class="responsive__img"
+              class="responsive-img"
               src="img/studies.png"
               alt="studiesimg"
             />
@@ -242,6 +242,6 @@
 </footer>
 
 
-    <script src="js/app.min.js?_v=20230206182100"></script>
+    <script src="js/app.min.js?_v=20230208203603"></script>
   </body>
 </html>
